[package]
name = "elisabot"
version = "0.1.0"
authors = ["Gabriele Belluardo <gabriele.belluardo@outlook.it>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = "0.3.1"
teloxide-macros = "0.3.2"

dotenv = "0.15"
log = "0.4"
pretty_env_logger = "0.4"

tokio = { version =  "0.2.11", features = ["rt-threaded", "macros"] }
