[package]
name = "elisabot"
version = "0.1.0"
authors = ["Gabriele Belluardo <gabriele.belluardo@outlook.it>"]
edition = "2018"

[dependencies]
dotenv = "0.15"
derive_more = "0.99.11"
futures = "0.3.6"
log = "0.4"
pretty_env_logger = "0.4"
teloxide-macros = "0.3.2"
teloxide = "0.3.2"

[dependencies.reqwest]
version = "0.10.8"
features = ["json"]

[dependencies.tokio] 
version =  "0.2.11"
features = ["rt-threaded", "macros"] 
